2024-04-30T16:17:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8898186951 # 230
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 10 15
* notice: prev accum: outdated-unq outdated-all / unq all: 780 2445 / 793 2463
* notice: next accum: outdated-unq outdated-all / unq all: 784 2450 / 794 2465
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-04-16] / [2024-04-30]

2024-04-29T01:00:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8871786043 # 225
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 13 18
* notice: prev accum: outdated-unq outdated-all / unq all: 779 2444 / 793 2463
* notice: next accum: outdated-unq outdated-all / unq all: 780 2445 / 793 2463
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-15] / []

2024-04-28T16:15:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8868844979 # 224
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-28
* notice: last 14d: unq all: 14 19
* notice: prev accum: outdated-unq outdated-all / unq all: 779 2444 / 792 2462
* notice: next accum: outdated-unq outdated-all / unq all: 779 2444 / 793 2463
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-28]

2024-04-28T01:04:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8863869627 # 222