@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-30T16:17:21Z",
-  "count_outdated" : 2450,
-  "uniques_outdated" : 784,
+  "timestamp" : "2024-05-02T00:59:41Z",
+  "count_outdated" : 2455,
+  "uniques_outdated" : 787,
   "count" : 2465,
   "uniques" : 794,
   "views" : [
-    {
-      "timestamp": "2024-04-17T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-04-20T00:00:00Z",
       "count": 2,
