@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 10,
+  "count": 10,
+  "uniques": 7,
   "views": [
-    {
-      "timestamp": "2024-04-17T00:00:00Z",
-      "count": 5,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-04-20T00:00:00Z",
       "count": 2,
